tests/PhiCore/compile_failure/src/core/flat_ptr/not_null_construct_nullptr.fail.cpp
#include <phi/core/flat_ptr.hpp>

int main()
{
    phi::not_null_flat_ptr ptr(nullptr);
}
